# AutOSINT

./: .gitignore  Cargo.toml  Dockerfile.rust  devbox.json  docker-compose.yml
.github/workflows/: ci.yml
config/: system.toml
config/prompts/: analyst.md  processor.md
config/searxng/: settings.yml
crates/common/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine/src/: circuit_breaker.rs  lib.rs  main.rs
crates/engine/src/analyst/: mod.rs  session.rs
crates/engine/src/config/: loader.rs  mod.rs  validation.rs
crates/engine/src/embeddings/: backfill.rs  mod.rs  openai.rs
crates/engine/src/graph/: claims.rs  conversions.rs  dedup.rs  entities.rs  mod.rs  relationships.rs  search.rs
crates/engine/src/llm/: anthropic.rs  mod.rs  openai.rs  session.rs  types.rs
crates/engine/src/orchestrator/: mod.rs  state_machine.rs
crates/engine/src/processor/: mod.rs  pool.rs  session.rs
crates/engine/src/queue/: mod.rs
crates/engine/src/store/: assessments.rs  investigations.rs  mod.rs  work_orders.rs
crates/engine/src/store/migrations/: 20260219000001_initial_schema.sql  20260220000001_add_work_order_cycle.sql  20260222000001_hnsw_assessment_index.sql
crates/engine/src/tools/: mod.rs  registry.rs  truncation.rs
crates/engine/src/tools/handlers/: batch_extract.rs  create_claim.rs  create_entity.rs  create_relationship.rs  create_work_order.rs  fetch_source_catalog.rs  fetch_source_query.rs  fetch_url.rs  get_assessment.rs  get_entity.rs  get_investigation_history.rs  list_fetch_sources.rs  merge_entities.rs  mod.rs  produce_assessment.rs  query_geo.rs  search_assessments.rs  search_claims.rs  search_entities.rs  search_relationships.rs  traverse_relationships.rs  update_entity.rs  update_entity_with_change_claim.rs  update_relationship.rs  web_search.rs
crates/engine/tests/: graph_integration.rs  processor_integration.rs
crates/fetch/: Cargo.toml
crates/fetch/src/: cache.rs  fetch.rs  main.rs  rate_limit.rs  routes.rs
crates/geo/: Cargo.toml
docs/: M4_E2E_TEST_REPORT_3.md  PLAN.md  ROADMAP.md  SYSTEM_IMPROVEMENTS.md
observability/loki/: loki-config.yml
observability/prometheus/: prometheus.yml
services/fetch-browser/: Dockerfile  package.json
(+43 files in other folders)
