[workspace]
members = [
    "crates/common",
    "crates/engine",
    "crates/fetch",
    "crates/geo",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Shared across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Database clients
neo4rs = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }

# Internal crates
autosint-common = { path = "crates/common" }
