[package]
name = "autosint-fetch"
version.workspace = true
edition.workspace = true

[dependencies]
autosint-common.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
reqwest.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
